# fun_with_elastic

./: .gitignore  01_wsl_setup.txt  02_elastic_setup.txt  03_kibana_setup.txt  04_ollama_setup.txt  README.md  later.txt
documents/: A CASE OF IDENTITY.txt  A SCANDAL IN BOHEMIA.txt  HIS LAST BOW.txt  THE ADVENTURE OF BLACK PETER.txt  THE ADVENTURE OF CHARLES AUGUSTUS MILVERTON.txt  THE ADVENTURE OF SHOSCOMBE OLD PLACE.txt  THE ADVENTURE OF THE ABBEY GRANGE.txt  THE ADVENTURE OF THE BERYL CORONET.txt  THE ADVENTURE OF THE BLANCHED SOLDIER.txt  THE ADVENTURE OF THE BLUE CARBUNCLE.txt  THE ADVENTURE OF THE BURCE-PARTINGTON PLANS.txt  THE ADVENTURE OF THE CARDBOARD BOX.txt  THE ADVENTURE OF THE COPPER BEECHES.txt  THE ADVENTURE OF THE CREEPING MAN.txt  THE ADVENTURE OF THE DANCING MEN.txt  THE ADVENTURE OF THE DEVILS FOOT.txt  THE ADVENTURE OF THE EMPTY HOUSE.txt  THE ADVENTURE OF THE ENGINEER’S THUMB.txt  THE ADVENTURE OF THE GOLDEN PINCE-NEZ.txt  THE ADVENTURE OF THE ILLUSTRIOUS CLIENT.txt  THE ADVENTURE OF THE LION'S MANE.txt  THE ADVENTURE OF THE MAZARIN STONE.txt  THE ADVENTURE OF THE MISSING THREE-QUARTER.txt  THE ADVENTURE OF THE NOBLE BACHELOR.txt  THE ADVENTURE OF THE NORWOOD BUILDER.txt  THE ADVENTURE OF THE PRIORY SCHOOL.txt  THE ADVENTURE OF THE RED CIRCLE.txt  THE ADVENTURE OF THE RETIRED COLOURMAN.txt  THE ADVENTURE OF THE SECOND STAIN.txt  THE ADVENTURE OF THE SOLITARY CYCLIST.txt  (+25 more)
python_chat/: README.md  chat.py  config.py  mcp_bridge.py  pyproject.toml
python_mcp_server/: README.md  config.py  elasticsearch_client.py  pyproject.toml  server.py
(+47 files in other folders)
