[project]
name = "text-file-chat"
version = "0.1.0"
description = "CLI chat interface using Ollama qwen2.5:3b with MCP tool access"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[tool.setuptools]
py-modules = ["chat", "config", "mcp_bridge"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
