[project]
name = "text-file-search-mcp"
version = "0.1.0"
description = "MCP server for lexical and semantic search of text files in Elasticsearch"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools]
py-modules = ["server", "config", "elasticsearch_client"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
